fix answer paragraph spacing

--- a/app/assets/stylesheets/components/answers/answer_index_item.scss
+++ b/app/assets/stylesheets/components/answers/answer_index_item.scss
@@ -16,6 +16,8 @@
 
 .AnswerText {
   padding-bottom: 8px;
+  white-space: pre-line;
+
 }
 
 .CommentsLink {
